--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development
+.env.test
+.env.production
